--- a/ProjectRegistroPonto/src/br/com/registro/view/TelaRegistroPonto.form
+++ b/ProjectRegistroPonto/src/br/com/registro/view/TelaRegistroPonto.form
@@ -91,7 +91,7 @@
         <Component class="javax.swing.JLabel" name="jLabelHora">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="24" style="1"/>
+              <Font name="Tahoma" size="36" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Hora"/>
           </Properties>
@@ -102,7 +102,7 @@
         <Component class="javax.swing.JLabel" name="jLabelData">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="24" style="1"/>
+              <Font name="Tahoma" size="36" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Data"/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -123,6 +123,9 @@
         <Component class="javax.swing.JButton" name="jButtonRegistrar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Registrar"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRegistrarActionPerformed"/>
